--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.22.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1"
