--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cornerstone-core": "^2.6.1",
     "firebase": "^9.22.1",
     "react": "^18.0.0",
+    "react-dock": "^0.6.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-modal": "^3.16.1",
