--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^5.6.1",
+    "bootstrap": "^5.3.0",
     "cornerstone-core": "^2.6.1",
     "firebase": "^9.22.1",
+    "framer-motion": "^10.12.16",
+    "node-sass": "^7.0.3",
     "react": "^18.0.0",
     "react-dock": "^0.6.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1"
